lockate/lockate-jobs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lockate-jobs
  namespace: lockate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lockate-jobs
  template:
    metadata:
      labels:
        app: lockate-jobs
    spec:
      imagePullSecrets:
        - name: harbor-credentials
      containers:
        - name: jobs
          image: harbor.kubernetes.giuseppebosa.eu/lockate/lockate:latest
          imagePullPolicy: Always
          command: ["java", "-jar", "lockate.jar", "--spring.profiles.active=jobs"]
