lockate/lockate-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lockate-api
  namespace: lockate
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lockate-api
  template:
    metadata:
      labels:
        app: lockate-api
    spec:
      imagePullSecrets:
        - name: harbor-credentials
      containers:
        - name: api
          image: harbor.kubernetes.giuseppebosa.eu/lockate/lockate:latest
          imagePullPolicy: Always
          command: ["java", "-jar", "lockate.jar", "--spring.profiles.active=api"]
---
apiVersion: v1
kind: Service
metadata:
  name: lockate-api
  namespace: lockate
spec:
  type: ClusterIP
  ports:
    - port: 3118
      targetPort: 3118
  selector:
    app: lockate-api
